# application/src/main/java/com/trading/control/application/domain/model/MarketType.java
@@ -1,18 +1,0 @@
-package com.trading.control.application.domain.model;
-
-import com.trading.control.application.domain.model.chanel.Channel;
-import lombok.Builder;
-import lombok.Singular;
-import lombok.Value;
-
-import java.util.List;
-
-@Value
-@Builder
-public class MarketType {
-    String code;
-    String displayName;
-    boolean enabled;
-    @Singular
-    List<Channel> channels;
-}
